--- a/src/app/shared/table-meta/table-meta.html
+++ b/src/app/shared/table-meta/table-meta.html
@@ -1,158 +1,301 @@
-<div class="card space-y-4">
-    <div class="flex justify-between gap-4">
-        <div class="flex items-end">
-            @if(showTotalRecord()){
-            <h4 class="font-semibold">
-                Selected : {{totalSelected()}}/{{totalData()}}
-            </h4>
-            }
-
-        </div>
-        <div class="flex gap-4">
-            @if(showFrozen()){
-            <p-togglebutton [onIcon]="'pi pi-lock'" offIcon="pi pi-lock-open" [onLabel]="'Action'" offLabel="Action"
-                (onChange)="actionFrozen.set(!actionFrozen())" size="small" />
-            }
-            @if(showColumnToggle()){
-            <p-button (click)="op.toggle($event)" icon="pi pi-sliders-h" label="Column" size="small" />
-            }
-
-        </div>
+<div class="card space-y-4 text-sm">
+  <div class="flex justify-between gap-4">
+    <div class="flex items-end">
+      @if (showTotalRecord()) {
+        <h4 class="font-semibold">
+          @if (totalSelected()) {
+            Đã chọn : {{ totalSelected() }}/{{ totalData() }} bản ghi
+          } @else {
+            Tổng : {{ totalData() }}
+          }
+        </h4>
+      }
     </div>
-    <p-table [scrollable]="true" [value]="dataTable()" [virtualScroll]="virtualScroll()"
-        [virtualScrollItemSize]="rowHeight()" [scrollHeight]="scrollHeight()" class="text-xs xl:text-sm">
-        <ng-template #header>
-            <tr>
-                @if(showCheckboxToggle()){
-                <th>
-                    <p-checkbox [binary]="true" [ngModel]="allSelected"
-                        (onChange)="toggleSelectAll($event)">></p-checkbox>
-                </th>
-                }
-                @for (item of columns(); track $index) {
-                @if (!item.visible) {
-                @if(item.type !== 'action'){
-                <th [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth , width : item.width}">
-                    {{ item.label }}
-                </th>
-                } @else {
-                <th pFrozenColumn [alignFrozen]="'right'" [frozen]="actionFrozen()"
-                    [ngClass]="{ 'font-bold': actionFrozen() }"
-                    [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth, width : item.width }"
-                    [ngClass]="actionFrozen() ? '!bg-gray-100' : ''">
-                    {{ item.label }}
-                </th>
-                } }
-                }
-            </tr>
-        </ng-template>
-        <ng-template #body let-data let-rowIndex="rowIndex">
-            <tr>
-                @if(showCheckboxToggle()){
-                <td>
-                    <p-checkbox [binary]="true" [ngModel]="selectedRows.includes(data)"
-                        (onChange)="toggleRow(data, $event)">></p-checkbox>
-                </td>
-                }
 
-                @for (item of columns(); track $index) {
-                @if (!item.visible) {
-                @switch (item.type) {
+    <div class="flex gap-4">
+      @if (showFrozen()) {
+        <p-togglebutton
+          [onIcon]="'pi pi-lock'"
+          offIcon="pi pi-lock-open"
+          [onLabel]="'Thao Tác'"
+          offLabel="Thao Tác"
+          (onChange)="actionFrozen.set(!actionFrozen())"
+          size="small"
+        />
+      }
+      @if (actionsTable().length > 0) {
+        <div class="card flex justify-center">
+          <p-menu #menu [model]="actionsTable()" [popup]="true" />
+          <p-button
+            (click)="menu.toggle($event)"
+            icon="pi pi-ellipsis-v"
+            label="Hành động"
+            size="small"
+          />
+        </div>
+      }
+      @if (showColumnToggle()) {
+        <p-button
+          (click)="op.toggle($event)"
+          icon="pi pi-sliders-h"
+          label="Cột"
+          size="small"
+          class="!py-1"
+        />
+      }
+    </div>
+  </div>
+
+  <p-table
+    [value]="dataTable() || []"
+    stripedRows
+    showGridlines
+    class="text-xs xl:text-sm bg-white"
+  >
+    <ng-template pTemplate="header">
+      <tr>
+        @if (showCheckboxToggle()) {
+          <th>
+            <p-checkbox
+              [binary]="true"
+              [ngModel]="allSelected"
+              (onChange)="toggleSelectAll($event)"
+            ></p-checkbox>
+          </th>
+        }
+        @for (item of columns(); track $index) {
+          @if (!item.visible) {
+            @if (item.type !== 'action') {
+              <th [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth, width: item.width }">
+                {{ item.label }}
+              </th>
+            } @else {
+              <th
+                pFrozenColumn
+                [alignFrozen]="'right'"
+                [frozen]="actionFrozen()"
+                class="!px-4"
+                [ngClass]="{ 'font-bold': actionFrozen() }"
+                [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth, width: item.width }"
+                [ngClass]="actionFrozen() ? '!bg-blue-100' : ''"
+              >
+                {{ item.label }}
+              </th>
+            }
+          }
+        }
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
+      <cdk-virtual-scroll-viewport
+        (scrolledIndexChange)="onScroll($event)"
+        [itemSize]="41"
+        [ngStyle]="{ 'height.px': scrollHeight(), overflowY: 'auto' }"
+      >
+        <tr>
+          @if (showCheckboxToggle()) {
+            <td>
+              <p-checkbox
+                [binary]="true"
+                [ngModel]="selectedRows.includes(data)"
+                (onChange)="toggleRow(data, $event)"
+              ></p-checkbox>
+            </td>
+          }
+
+          @for (item of columns(); track $index) {
+            @if (!item.visible) {
+              @switch (item.type) {
                 @case ('index') {
-                <td [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth,width : item.width }">
+                  <td
+                    [style]="{
+                      minWidth: item.minWidth,
+                      maxWidth: item.maxWidth,
+                      width: item.width,
+                    }"
+                    [ngClass]="item.align ? '!text-' + item.align : '!text-left'"
+                  >
                     <span>{{ getIndex(rowIndex) }}</span>
-                </td>
+                  </td>
                 }
                 @case ('text') {
-                <td [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth, width : item.width }"
-                    pTooltip="{{ item.tooltip && data[item.tooltipField ?? ''] }}" tooltipPosition="top">
-                    <span [ngClass]="item.lineClamp ? 'line-clamp-' + item.lineClamp  : ''">{{ data[item.field] |
-                        truncate :
-                        item.truncate }}</span>
-                </td>
+                  <td
+                    [style]="{
+                      minWidth: item.minWidth,
+                      maxWidth: item.maxWidth,
+                      width: item.width,
+                    }"
+                    pTooltip="{{ item.tooltip && data[item.tooltipField ?? ''] }}"
+                    [ngClass]="item.align ? '!text' + item.align : '!text-left'"
+                    tooltipPosition="top"
+                  >
+                    <span [ngClass]="item.lineClamp ? 'line-clamp-' + item.lineClamp : ''">{{
+                      data[item.field] | truncate: item.truncate
+                    }}</span>
+                  </td>
                 }
                 @case ('image') {
-                <td [style]=" { minWidth: item.minWidth, maxWidth: item.maxWidth, width : item.width }">
-                    <img [ngSrc]="data[item.field] " width="56" height="56"
-                        class="aspect-square object-cover object-center rounded" alt="item image"
-                        [style]="{width : item.width }" priority />
-                </td>
+                  <td
+                    [style]="{
+                      minWidth: item.minWidth,
+                      maxWidth: item.maxWidth,
+                      width: item.width,
+                    }"
+                  >
+                    <img
+                      [ngSrc]="data[item.field]"
+                      width="56"
+                      height="56"
+                      class="aspect-square object-cover object-center rounded"
+                      alt="item image"
+                      [style]="{ width: item.width }"
+                      priority
+                    />
+                  </td>
+                }
+                @case ('transform') {
+                  <td
+                    [style]="{
+                      minWidth: item.minWidth,
+                      maxWidth: item.maxWidth,
+                      width: item.width,
+                    }"
+                  >
+                    {{ item.transformFn ? item.transformFn(data[item.field]) : data[item.field] }}
+                  </td>
                 }
                 @case ('currency') {
-                <td [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth , width : item.width}">
-                    <span>{{ data[item.field] | currency:'VND' }}</span>
-                </td>
+                  <td
+                    [style]="{
+                      minWidth: item.minWidth,
+                      maxWidth: item.maxWidth,
+                      width: item.width,
+                    }"
+                    [ngClass]="item.align ? '!text' + item.align : '!text-left'"
+                  >
+                    <span>{{ data[item.field] | currency: 'VND' }}</span>
+                  </td>
                 }
                 @case ('date') {
-                <td [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth , width : item.width}">
-                    <span>{{ data[item.field] | date:'dd/MM/yyyy' }}</span>
-                </td>
+                  <td
+                    [style]="{
+                      minWidth: item.minWidth,
+                      maxWidth: item.maxWidth,
+                      width: item.width,
+                    }"
+                    [ngClass]="item.align ? '!text' + item.align : '!text-left'"
+                  >
+                    <span>{{ data[item.field] | date: 'dd/MM/yyyy' }}</span>
+                  </td>
                 }
                 @case ('action') {
-                <td pFrozenColumn [frozen]="actionFrozen()" [alignFrozen]="'right'"
-                    [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth,  width : item.width}"
-                    [ngClass]="actionFrozen() ? '!bg-gray-100' : ''">
-                    <div class=" flex gap-2">
-                        @for (btn of item.actionButtons; track $index) {
-                        <button [pTooltip]="btn.tooltipLabel ?? ''" severity="secondary" tooltipPosition="top"
-                            class="flex items-center gap-2 px-2 py-1 rounded bg-blue-600 text-white text-sm"
-                            (click)="btn.children ? toggleMenu($event, menu) : onActionClick(btn, data)">
-                            @if (btn.icon) {
-                            <i class=" {{ btn.icon }}"></i>
-                            }
-                            <span>
-                                {{ btn.label }}
+                  <td
+                    pFrozenColumn
+                    [frozen]="actionFrozen()"
+                    [alignFrozen]="'right'"
+                    class="!px-4"
+                    [style]="{
+                      minWidth: item.minWidth,
+                      maxWidth: item.maxWidth,
+                      width: item.width,
+                    }"
+                    [ngClass]="actionFrozen() ? '!bg-blue-100' : ''"
+                  >
+                    <div class="flex gap-2">
+                      @for (btn of item.actionButtons; track $index) {
+                        <button
+                          [pTooltip]="btn.tooltipLabel ?? ''"
+                          severity="secondary"
+                          tooltipPosition="top"
+                          class="flex justify-center items-center gap-2 px-2 py-1 rounded bg-blue-500 text-white text-sm"
+                          (click)="
+                            btn.children ? toggleMenu($event, menu) : onActionClick(btn, data)
+                          "
+                        >
+                          @if (btn.icon) {
+                            <i class="{{ btn.icon }}"></i>
+                          }
+                          @if (btn.label) {
+                            <span class="w-fit">
+                              {{ btn.label }}
                             </span>
+                          }
                         </button>
                         <p-popover #menu>
-                            @for (btnChild of btn.children; track $index) {
-                            <button [pTooltip]="btnChild.tooltipLabel ?? ''" severity="secondary" tooltipPosition="top"
-                                class="flex items-center gap-2 px-2 py-1 rounded bg-blue-600 text-white text-sm"
-                                (click)="onActionClick(btnChild, data)">
-                                @if (btnChild.icon) {
+                          @for (btnChild of btn.children; track $index) {
+                            <button
+                              [pTooltip]="btnChild.tooltipLabel ?? ''"
+                              severity="secondary"
+                              tooltipPosition="top"
+                              class="flex items-center justify-center gap-2 px-2 py-1 rounded bg-blue-600 text-white text-sm"
+                              (click)="onActionClick(btnChild, data)"
+                            >
+                              @if (btnChild.icon) {
                                 <i class=" {{ btnChild.icon }}"></i>
-                                }
-                                <span>
-                                    {{ btnChild.label }}
+                              }
+                              @if (btn.label) {
+                                <span class="w-fit">
+                                  {{ btn.label }}
                                 </span>
+                              }
                             </button>
-                            }
+                          }
                         </p-popover>
-                        }
+                      }
                     </div>
-                </td>
+                  </td>
                 }
                 @default {
-                <td [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth }">
+                  <td [style]="{ minWidth: item.minWidth, maxWidth: item.maxWidth }">
                     <span>{{ data[item.field] }}</span>
-                </td>
+                  </td>
                 }
-                }
-                }
-                }
-            </tr>
-        </ng-template>
-    </p-table>
+              }
+            }
+          }
+        </tr>
+      </cdk-virtual-scroll-viewport>
+    </ng-template>
+  </p-table>
 </div>
 <p-popover #op>
-    <div class="flex flex-col gap-3">
-        <h1>Column Toggle</h1>
-        <div class="grid grid-cols-2 gap-2 w-[25rem] bg-slate-50 p-2 rounded">
-            @for (item of columns(); track $index) {
-            <div class="flex items-center gap-2">
-                <p-checkbox [inputId]="item.field" [name]="item.field" [(ngModel)]="formModelColumn[item.field]"
-                    [binary]="true" [invalid]="isInvalid()"></p-checkbox>
-                <label [for]="item.field">{{ item.label }}</label>
-            </div>
-            }
+  <div class="flex flex-col gap-3">
+    <h1>Chuyển đổi cột</h1>
+    <div class="grid grid-cols-2 gap-2 w-[25rem] bg-slate-50 p-2 rounded">
+      @for (item of columns(); track $index) {
+        <div class="flex items-center gap-2">
+          <p-checkbox
+            [inputId]="item.field"
+            [name]="item.field"
+            [(ngModel)]="formModelColumn[item.field]"
+            [binary]="true"
+            [invalid]="isInvalid()"
+          ></p-checkbox>
+          <label [for]="item.field">{{ item.label }}</label>
         </div>
-        <div class="flex justify-center gap-3">
-            <button pButton severity="contrast" type="submit" size="small" class="!py-1.5" (click)="onSubmit(op)">
-                <span pButtonLabel>Apply</span>
-            </button>
-            <button pButton severity="danger" type="submit" size="small" class="!py-1.5" (click)="op.hide()">
-                <span pButtonLabel>Cancel</span>
-            </button>
-        </div>
+      }
     </div>
+    <div class="flex justify-center gap-3">
+      <button
+        pButton
+        severity="contrast"
+        type="submit"
+        size="small"
+        class="!py-1.5"
+        (click)="onSubmit(op)"
+      >
+        <span pButtonLabel>Áp dụng</span>
+      </button>
+      <button
+        pButton
+        severity="danger"
+        type="submit"
+        size="small"
+        class="!py-1.5"
+        (click)="op.hide()"
+      >
+        <span pButtonLabel>Hủy bỏ</span>
+      </button>
+    </div>
+  </div>
 </p-popover>
