--- a/src/app/shared/table-meta/table-meta.scss
+++ b/src/app/shared/table-meta/table-meta.scss
@@ -1,8 +1,11 @@
 :host ::ng-deep {
   .p-datatable-tbody > tr > td {
+    height: 41px;
     padding: 6px;
+    white-space: nowrap;
   }
   .p-datatable-thead > tr > th {
+    min-height: 41px;
     padding: 6px;
   }
 }
