--- a/src/app/feature/site/site.html
+++ b/src/app/feature/site/site.html
@@ -1,3 +1,6 @@
-<div class="flex flex-col min-h-screen">
+<div class="flex flex-col min-h-screen bg-blue-50">
+  <app-header />
+  <div class="p-4">
     <router-outlet />
+  </div>
 </div>
