--- a/src/app/core/layout/header/header.html
+++ b/src/app/core/layout/header/header.html
@@ -1,8 +1,8 @@
-<div class="flex justify-between items-center px-4 bg-white h-[50px]">
+<div class="flex justify-between items-center pl-4 bg-white">
   <div><h1 class="text-2xl font-semibold">Báo cáo</h1></div>
   <div class="hidden lg:block">
     <div class="flex gap-4">
-      <button type="button" class="flex items-center px-2 py-1 rounded gap-2 bg-blue-100">
+      <button type="button" class="flex items-center p-3 gap-2 bg-blue-100">
         <i class="pi pi-user"></i>
         <span>Tài khoản</span>
       </button>
