--- a/src/app/feature/site/site.scss
+++ b/src/app/feature/site/site.scss
@@ -5,7 +5,8 @@
       border-bottom: 1px solid #eeeeee;
     }
     .p-dialog-content {
-      padding: 10px 10px 30px 10px;
+      padding: 10px 0 30px 0;
+      overflow-y: hidden;
     }
   }
 }
