add  : error and 404 page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,6 @@
 <router-outlet />
+<p-toast
+  [showTransformOptions]="'translateY(100%)'"
+  [showTransitionOptions]="'300ms'"
+  [hideTransitionOptions]="'300ms'"
+></p-toast>
