--- a/src/app/feature/auth/access/access.html
+++ b/src/app/feature/auth/access/access.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen flex items-center justify-center bg-gray-100 p-6">
+<div class="min-h-screen flex items-center justify-center bg-red-50 p-6">
   <p-card styleClass="max-w-md text-center py-6 shadow-xl">
     <div class="flex justify-center mb-4">
       <p-avatar
